[gd_scene load_steps=12 format=3 uid="uid://ct51hooycinfb"]

[ext_resource type="PackedScene" uid="uid://fdgxvi0mndtq" path="res://scenes/_shared/cutscenes/cutscene.tscn" id="1_tw43y"]
[ext_resource type="Script" path="res://scenes/_shared/cutscenes/end_credits.gd" id="2_l4t77"]
[ext_resource type="Resource" uid="uid://bpca423ydapsn" path="res://resources/instances/rolling_credits_og_data.tres" id="3_fi3qg"]
[ext_resource type="Resource" uid="uid://kmr1uhgtp68d" path="res://resources/instances/rolling_credits_port_data.tres" id="4_t8b2n"]
[ext_resource type="Script" path="res://scenes/_shared/cutscenes/sea_sparkles_parallax_bg.gd" id="5_5olc8"]
[ext_resource type="Texture2D" uid="uid://cmfcg56p1ywdu" path="res://art/cutscenes/ending/ending_credits_moon.png" id="5_kv0di"]
[ext_resource type="Texture2D" uid="uid://g4iith1xpt1" path="res://art/cutscenes/ending/ending_credits_bucho_0.png" id="6_c5ufe"]
[ext_resource type="Texture2D" uid="uid://cgxdaj67ey6yj" path="res://art/cutscenes/ending/ending_credits_bucho_1.png" id="7_rchap"]
[ext_resource type="Script" path="res://scenes/_shared/cutscenes/flying_credits_bucho.gd" id="10_07ai5"]
[ext_resource type="Texture2D" uid="uid://cue7pestmbrcu" path="res://art/cutscenes/ending/ending_credits_sea_shine_0.png" id="10_yjovn"]

[sub_resource type="SpriteFrames" id="SpriteFrames_w1dyf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_c5ufe")
}, {
"duration": 1.0,
"texture": ExtResource("7_rchap")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="CutsceneCredits" instance=ExtResource("1_tw43y")]
_autostart = true

[node name="EndCredits" type="Node" parent="." index="0"]
script = ExtResource("2_l4t77")
_original_credits = ExtResource("3_fi3qg")
_port_credits = ExtResource("4_t8b2n")
_debug_autostart = true

[node name="UiComponents" type="Control" parent="EndCredits" index="0"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="EndCredits/UiComponents" index="0"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -26.5
offset_top = 91.0
offset_right = 26.5
offset_bottom = 190.0
grow_horizontal = 2

[node name="JobLabel" type="Label" parent="EndCredits/UiComponents/VBoxContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.431373, 0.431373, 0.431373, 1)
theme_override_font_sizes/font_size = 16
text = "Job"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NamesLabel" type="Label" parent="EndCredits/UiComponents/VBoxContainer" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 14
text = "Name 1
Name 2
Name 3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="EndCredits/UiComponents" index="1"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SeaSparklesParallaxBackground" type="ParallaxBackground" parent="EndCredits" index="1"]
script = ExtResource("5_5olc8")
scroll_speed = 25.0

[node name="ColorRect" type="ColorRect" parent="EndCredits/SeaSparklesParallaxBackground" index="0"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="SeaColor" type="ColorRect" parent="EndCredits/SeaSparklesParallaxBackground" index="1"]
offset_top = 283.0
offset_right = 240.0
offset_bottom = 303.0
color = Color(0.180392, 0.180392, 0.74902, 1)
metadata/_edit_lock_ = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="EndCredits/SeaSparklesParallaxBackground" index="2"]
position = Vector2(0, 273)
metadata/_edit_lock_ = true

[node name="SeaSparkles" type="Sprite2D" parent="EndCredits/SeaSparklesParallaxBackground/ParallaxLayer" index="0"]
texture = ExtResource("10_yjovn")
centered = false
metadata/_edit_lock_ = true

[node name="SeaSparkles2" type="Sprite2D" parent="EndCredits/SeaSparklesParallaxBackground/ParallaxLayer" index="1"]
position = Vector2(10, 0)
texture = ExtResource("10_yjovn")
centered = false
metadata/_edit_lock_ = true

[node name="SeaSparkles3" type="Sprite2D" parent="EndCredits/SeaSparklesParallaxBackground/ParallaxLayer" index="2"]
position = Vector2(20, 0)
texture = ExtResource("10_yjovn")
centered = false
metadata/_edit_lock_ = true

[node name="SeaSparkles4" type="Sprite2D" parent="EndCredits/SeaSparklesParallaxBackground/ParallaxLayer" index="3"]
position = Vector2(30, 0)
texture = ExtResource("10_yjovn")
centered = false
metadata/_edit_lock_ = true

[node name="SeaSparkles5" type="Sprite2D" parent="EndCredits/SeaSparklesParallaxBackground/ParallaxLayer" index="4"]
position = Vector2(40, 0)
texture = ExtResource("10_yjovn")
centered = false
metadata/_edit_lock_ = true

[node name="SeaSparkles6" type="Sprite2D" parent="EndCredits/SeaSparklesParallaxBackground/ParallaxLayer" index="5"]
position = Vector2(50, 0)
texture = ExtResource("10_yjovn")
centered = false
metadata/_edit_lock_ = true

[node name="SeaSparkles7" type="Sprite2D" parent="EndCredits/SeaSparklesParallaxBackground/ParallaxLayer" index="6"]
position = Vector2(60, 0)
texture = ExtResource("10_yjovn")
centered = false
metadata/_edit_lock_ = true

[node name="SeaSparkles8" type="Sprite2D" parent="EndCredits/SeaSparklesParallaxBackground/ParallaxLayer" index="7"]
position = Vector2(70, 0)
texture = ExtResource("10_yjovn")
centered = false
metadata/_edit_lock_ = true

[node name="SeaSparkles9" type="Sprite2D" parent="EndCredits/SeaSparklesParallaxBackground/ParallaxLayer" index="8"]
position = Vector2(80, 0)
texture = ExtResource("10_yjovn")
centered = false
metadata/_edit_lock_ = true

[node name="SeaSparkles10" type="Sprite2D" parent="EndCredits/SeaSparklesParallaxBackground/ParallaxLayer" index="9"]
position = Vector2(90, 0)
texture = ExtResource("10_yjovn")
centered = false
metadata/_edit_lock_ = true

[node name="SeaSparkles11" type="Sprite2D" parent="EndCredits/SeaSparklesParallaxBackground/ParallaxLayer" index="10"]
position = Vector2(100, 0)
texture = ExtResource("10_yjovn")
centered = false
metadata/_edit_lock_ = true

[node name="SeaSparkles12" type="Sprite2D" parent="EndCredits/SeaSparklesParallaxBackground/ParallaxLayer" index="11"]
position = Vector2(110, 0)
texture = ExtResource("10_yjovn")
centered = false
metadata/_edit_lock_ = true

[node name="SeaSparkles13" type="Sprite2D" parent="EndCredits/SeaSparklesParallaxBackground/ParallaxLayer" index="12"]
position = Vector2(120, 0)
texture = ExtResource("10_yjovn")
centered = false
metadata/_edit_lock_ = true

[node name="SeaSparkles14" type="Sprite2D" parent="EndCredits/SeaSparklesParallaxBackground/ParallaxLayer" index="13"]
position = Vector2(130, 0)
texture = ExtResource("10_yjovn")
centered = false
metadata/_edit_lock_ = true

[node name="SeaSparkles15" type="Sprite2D" parent="EndCredits/SeaSparklesParallaxBackground/ParallaxLayer" index="14"]
position = Vector2(140, 0)
texture = ExtResource("10_yjovn")
centered = false
metadata/_edit_lock_ = true

[node name="SeaSparkles16" type="Sprite2D" parent="EndCredits/SeaSparklesParallaxBackground/ParallaxLayer" index="15"]
position = Vector2(150, 0)
texture = ExtResource("10_yjovn")
centered = false
metadata/_edit_lock_ = true

[node name="SeaSparkles17" type="Sprite2D" parent="EndCredits/SeaSparklesParallaxBackground/ParallaxLayer" index="16"]
position = Vector2(160, 0)
texture = ExtResource("10_yjovn")
centered = false
metadata/_edit_lock_ = true

[node name="SeaSparkles18" type="Sprite2D" parent="EndCredits/SeaSparklesParallaxBackground/ParallaxLayer" index="17"]
position = Vector2(170, 0)
texture = ExtResource("10_yjovn")
centered = false
metadata/_edit_lock_ = true

[node name="SeaSparkles19" type="Sprite2D" parent="EndCredits/SeaSparklesParallaxBackground/ParallaxLayer" index="18"]
position = Vector2(180, 0)
texture = ExtResource("10_yjovn")
centered = false
metadata/_edit_lock_ = true

[node name="SeaSparkles20" type="Sprite2D" parent="EndCredits/SeaSparklesParallaxBackground/ParallaxLayer" index="19"]
position = Vector2(190, 0)
texture = ExtResource("10_yjovn")
centered = false
metadata/_edit_lock_ = true

[node name="SeaSparkles21" type="Sprite2D" parent="EndCredits/SeaSparklesParallaxBackground/ParallaxLayer" index="20"]
position = Vector2(200, 0)
texture = ExtResource("10_yjovn")
centered = false
metadata/_edit_lock_ = true

[node name="SeaSparkles22" type="Sprite2D" parent="EndCredits/SeaSparklesParallaxBackground/ParallaxLayer" index="21"]
position = Vector2(210, 0)
texture = ExtResource("10_yjovn")
centered = false
metadata/_edit_lock_ = true

[node name="SeaSparkles23" type="Sprite2D" parent="EndCredits/SeaSparklesParallaxBackground/ParallaxLayer" index="22"]
position = Vector2(220, 0)
texture = ExtResource("10_yjovn")
centered = false
metadata/_edit_lock_ = true

[node name="SeaSparkles24" type="Sprite2D" parent="EndCredits/SeaSparklesParallaxBackground/ParallaxLayer" index="23"]
position = Vector2(230, 0)
texture = ExtResource("10_yjovn")
centered = false
metadata/_edit_lock_ = true

[node name="MoonSprite" type="Sprite2D" parent="EndCredits" index="2"]
position = Vector2(15, 15)
texture = ExtResource("5_kv0di")
metadata/_edit_lock_ = true

[node name="FlyingCreditsBucho" type="AnimatedSprite2D" parent="EndCredits" index="3"]
position = Vector2(200, 253)
sprite_frames = SubResource("SpriteFrames_w1dyf")
autoplay = "default"
frame = 1
frame_progress = 0.954037
script = ExtResource("10_07ai5")

[node name="Timer" type="Timer" parent="EndCredits/FlyingCreditsBucho" index="0"]
wait_time = 0.04
autostart = true

[node name="Timer" type="Timer" parent="EndCredits" index="4"]
one_shot = true

[connection signal="timeout" from="EndCredits/FlyingCreditsBucho/Timer" to="EndCredits/FlyingCreditsBucho" method="_on_timer_timeout"]
